<resources>
    <string name="app_name">Conscious Pancake</string>
    <string name="history">History</string>
    <string name="lobby">Lobby</string>
    <string name="profile">Profile</string>
    <string name="games_in_progress">Games in progress</string>
    <string name="watch">watch</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="profile_image_description">Profile image description</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit">Edit</string>
    <string name="profile_picture_upload_failed">Failed to upload profile picture.</string>
    <string name="profile_picture_download_failed">An error occurred whilst downloading profile picture.</string>
    <string name="failed_user_update">Failed to update user document.</string>
    <string name="title_welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="host">Host Game</string>
    <string name="join">Join Game</string>
    <string name="load_more">Load more</string>
    <string name="logout">Logout</string>
    <string name="no_games_lobby">No current games.\nStart a new game by clicking on the play button.</string>
    <string name="no_games_history">No completed games.\nAs soon as you finish a game against someone they will start appearing here.</string>
    <string name="history_title">Past Games</string>
    <string name="games">Games</string>
    <string name="game_properties">Game Properties</string>
    <string name="party">Party</string>
    <string name="game_size">Game size</string>
    <string name="turn_duration">Turn duration</string>
    <string name="vs">VS.</string>
    <string name="start_game">Start Game</string>
    <string name="lobby_code">Lobby Code</string>
    <string name="waiting_for_player_to_join">Waiting for player to join</string>
    <string name="join_game">Join Game</string>
    <string name="open_games">Open Games</string>
    <string name="no_open_games_found">No open Games found\nSwipe down to refresh</string>
    <string name="game">Game</string>
    <string name="play">Play</string>
    <string name="player_label">You are playing %s</string>
    <string name="winner_label">%s won!</string>
    <string name="winner">Winner</string>
    <string name="turns">Turns</string>
</resources>