<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="lobbyViewModel"
            type="ch.ffhs.conscious_pancake.ui.lobby.LobbyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lobby_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/lobby_host_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile_image_description"
                android:src="@{lobbyViewModel.lobby.host.profilePictureUri}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle_24px"  />

            <TextView
                android:id="@+id/lobby_host_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{lobbyViewModel.lobby.host.username}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lobby_host_picture" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lobby_vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/vs"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lobby_host" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lobby_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lobby_vs">

            <ProgressBar
                android:id="@+id/lobby_player2_progress"
                isVisible="@{lobbyViewModel.lobby.player2 == null}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />

            <TextView
                isVisible="@{lobbyViewModel.lobby.player2 == null}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_player_to_join"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lobby_player2_progress"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/lobby_player2_picture"
                isVisible="@{lobbyViewModel.lobby.player2 != null}"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/profile_image_description"
                android:src="@{lobbyViewModel.lobby.player2.profilePictureUri}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle_24px" />

            <TextView
                android:id="@+id/lobby_player2_username"
                isVisible="@{lobbyViewModel.lobby.player2 != null}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{lobbyViewModel.lobby.player2.username}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lobby_player2_picture" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/lobby_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lobby_player2"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/lobby_code_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lobby_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="@id/lobby_code"
                app:layout_constraintStart_toStartOf="@id/lobby_code"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lobby_code"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_back"
                android:gravity="center"
                android:text="@{lobbyViewModel.lobby.id}"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lobby_code_lbl"
                app:layout_constraintWidth_percent="0.6" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/lobby_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/start_game"
            android:enabled="@{lobbyViewModel.canStartGame}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>